# neuro_ingest

./: .gitignore  README.md  environment.yml  pyproject.toml
src/neuro_ingest/: schema.py
src/neuro_ingest/ingest/: base.py  tdt.py
tests/: test_base_ingestor.py
